add Pencil, Eraser, Rainbow, Progresive & Clear tools

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
 </head>
 <body>
   <div id="content">
+    <div id="panel">
+      <div id="panel-tools">
+        <button>
+          Pencil
+        </button>
+        <button>
+          Eraser
+        </button>
+        <button>
+          Rainbow
+        </button>
+        <button>
+          Progresive
+        </button>
+        <button>
+          Clear
+        </button>
+      </div>
+      <div id="panel-pickers">
+        <div id="color-picker">
+          <input type="color" name="color" id="color">
+        </div>
+        <div id="size-picker">
+          <input type="range" name="size" id="size">
+        </div>
+      </div>
+    </div>
     <div id="grid-container">
     </div>
     
