add tool picker

--- a/index.html
+++ b/index.html
@@ -10,21 +10,11 @@
   <div id="content">
     <div id="panel">
       <div id="panel-tools">
-        <button>
-          Pencil
-        </button>
-        <button>
-          Eraser
-        </button>
-        <button>
-          Rainbow
-        </button>
-        <button>
-          Progresive
-        </button>
-        <button>
-          Clear
-        </button>
+        <button class="tool active">Pencil</button>
+        <button class='tool'>Eraser</button>
+        <button class='tool'>Rainbow</button>
+        <button class='tool'>Progresive</button>
+        <button id="clear">Clear</button>
       </div>
       <div id="panel-pickers">
         <div id="color-picker">
