add color & size pickers

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
           <input type="color" name="color" id="color">
         </div>
         <div id="size-picker">
-          <input type="range" name="size" id="size">
+          <input type="range" name="size" id="size-picker" min="16" max="64" step="1" value="16">
+          <div id="size-text">16x16</div>
         </div>
       </div>
     </div>
