--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
       <div id="panel-pickers">
         <div id="color-picker">
           <input type="color" name="color" id="color">
+          <div id="color-display"></div>
         </div>
         <div id="size-picker">
-          <input type="range" name="size" id="size-picker" min="16" max="64" step="1" value="16">
+          <div>
+            <input type="range" name="size" id="size-picker" min="16" max="64" step="1" value="16">
+          </div>
           <div id="size-text">16x16</div>
         </div>
       </div>
